[package]
name = "fit-overlay-cli"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fit-rust = "0.1.8"
clap = { version = "4", features = ["derive"] }
ffmpeg-sidecar = "1.1.0"
image = "0.25.1"
threadpool = "1.8"
thread_local = "1"
charming = { path = "libs/charming/charming", features = ["ssr"] }
# svg
resvg = { version = "0.37.0" }
usvg = { version = "0.37.0" }

[[bin]]
name = "fit-overlay-cli"
path = "src/bin/main.rs"
required-features = []